<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.SignupActivity"
    android:background="#FFF1F0">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSignUP"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/Widget.AppCompat.Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/sign_up"
        app:titleMarginTop="14dp"
        app:titleTextColor="@color/crello_name"/>

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/green_dark"
        android:text="@string/desc_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSignUP" />

    <androidx.cardview.widget.CardView
        android:id="@+id/signupCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="14dp"
        android:layout_margin="32dp"
        android:padding="16dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:boxStrokeColor="@color/green_dark"
                app:hintTextColor="@color/green_dark"
                android:textColorHint="#666666">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/crello_name"
                    style="@style/Widget.AppCompat.EditText"
                    android:lines="1"
                    android:hint="@string/hint_username"
                    android:textColorHint="@color/gray"
                    android:padding="16dp"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:boxStrokeColor="@color/green_dark"
                app:placeholderTextColor="@color/green_dark"
                app:hintTextColor="@color/green_dark"
                android:textColorHint="#666666">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/crello_name"
                    android:hint="@string/hint_email"
                    style="@style/Widget.AppCompat.EditText"
                    android:textColorHint="@color/gray"
                    android:padding="16dp"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:boxStrokeColor="@color/green_dark"
                app:placeholderTextColor="@color/green_dark"
                app:hintTextColor="@color/green_dark"
                android:textColorHint="#666666">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPassword"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/hint_password"
                    android:lines="1"
                    android:padding="16dp"
                    android:textColor="@color/crello_name"
                    android:textColorHint="@color/gray"
                    android:inputType="textWebPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUpActivity"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_fill_gradient"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_medium"
                android:layout_marginBottom="32dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvAlreadyHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_from_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupCardView"
        app:layout_constraintVertical_bias="0.378"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/crello_name"
        android:textSize="16sp" />

</androidx.constraintlayout.widget.ConstraintLayout>