<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MyProfileActivity"
    android:background="#FFF1F0">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMyProfile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/Widget.AppCompat.Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="My Profile"
        app:titleMarginTop="14dp"
        app:titleTextColor="@color/crello_name"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/myProfileCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginTop="64dp"
        android:padding="16dp"
        android:paddingTop="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMyProfile"
        app:layout_constraintVertical_bias="0.155">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/myProfileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:padding="8dp"
                android:background="@drawable/ic_user_img_with_bg"
                android:src="@drawable/ic_nav_user" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNameProfile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColorHint="#666666"
                app:boxStrokeColor="@color/green_dark"
                app:hintTextColor="@color/green_dark"
                app:placeholderTextColor="@color/green_dark">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etNameProfile"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:padding="16dp"
                    android:textColor="@color/crello_name"
                    android:textColorHint="@color/gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColorHint="#666666"
                app:boxStrokeColor="@color/green_dark"
                app:hintTextColor="@color/green_dark"
                app:placeholderTextColor="@color/green_dark">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmailProfile"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/email"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:padding="16dp"
                    android:textColor="@color/crello_name"
                    android:textColorHint="@color/gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhoneNumProfile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColorHint="#666666"
                app:boxStrokeColor="@color/green_dark"
                app:hintTextColor="@color/green_dark"
                app:placeholderTextColor="@color/green_dark">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPhoneProfile"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:lines="1"
                    android:padding="16dp"
                    android:textColor="@color/crello_name"
                    android:textColorHint="@color/gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdate"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_fill_gradient"
                android:fontFamily="@font/inter_medium"
                android:text="@string/upate_profile"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>